# GenerativeModels

./: .gitignore  README.md  pyproject.toml
ltrace/: gan_models.ipynb
ltrace/.ipynb_checkpoints/: gan_models-checkpoint.ipynb  vaes_models-checkpoint.ipynb
ltrace/datasets/: readme.md
