[tool.poetry]
name = "ltrace"
version = "0.1.0"
description = ""
authors = ["anthony <anthonyjbet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
tensorflow = "^2.12.0"
matplotlib = "^3.7.1"
jupyterlab = "^4.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
